--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:id="@+id/txtTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="28dp"
         android:text="API RESTful en formato JSON en Android"
         android:textAlignment="center"
         android:textSize="20sp"
@@ -25,18 +27,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="107dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="111dp"
+        android:onClick="btnconsumir"
         android:text="Consumir servicio" />
 
-    <TextView
-        android:id="@+id/txtcontenido"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="140dp"
-        android:text="Esperando datos" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="433dp"
+        android:layout_alignTop="@+id/btnConsumir"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="58dp"
+        android:layout_marginBottom="-1dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/txtcontenido"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="71dp"
+                android:text="Esperando datos" />
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
